// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverlayStickyTop Должен соответствовать снэпшоту в состоянии "close" 1`] = `
<div
  className="overlay-sticky-top"
/>
`;

exports[`OverlayStickyTop Должен соответствовать снэпшоту в состоянии "open" 1`] = `
<div
  className="overlay-sticky-top overlay-sticky-top_open"
/>
`;
